# micromodels

./: .gitattributes  .gitignore  CHANGELOG.md  HUGGINGFACE.md  LICENSE  PERFORMANCE.md  README.md  RELEASE.md  capabilities.json  pyproject.toml  shipmodel
.github/workflows.disabled/: release.yml
micromodel_ship/: auth.py  cli.py  config.py  plain_mlx.py  prefetch.py  registry.py  runtime.py  server.py
scripts/: bench.sh  build-release.sh  chat.sh  check-no-secrets.sh  package.sh  paths.sh  prefetch.sh  publish-hf.sh  run.sh  serve.sh  status.sh  stop.sh
tests/: test_auth.py  test_capabilities.py  test_cli_imports.py  test_plain_mlx_stream.py  test_registry.py  test_server_integration.py  test_unix_socket.py
